cluster/kube-system/dns/external-services/adguard.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: external-adguard02
  annotations:
    kubernetes.io/ingress.class: "external"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.elcarpenter.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.elcarpenter.com/oauth2/start"
    nginx.ingress.kubernetes.io/configuration-snippet: |
    #   # Bypass auth for requests from local network
    #   # This works, but are there some security concerns?
    #   satisfy any;
    #   allow 192.168.0.0/16;
    #   allow 172.16.0.0/12;
    #   allow 10.0.0.0/8;
    #   deny all;
spec:
  rules:
  - host: dns02.network.elcarpenter.com
    http:
      paths:
      - backend:
          serviceName: external-adguard02
          servicePort: 80
  tls:
  - hosts:
    - dns02.network.elcarpenter.com
---
apiVersion: v1
kind: Service
metadata:
  name: external-adguard02
spec:
  ports:
  - name: http
    port: 80
  externalIPs:
  - 10.1.1.12
#  type: ExternalName
#  externalName: 10.1.1.12
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-adguard02
subsets:
- addresses:
  - ip: 10.1.1.12
  ports:
  - name: http
    port: 80
    protocol: TCP

#########################################################################
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: external-adguard03
  annotations:
    kubernetes.io/ingress.class: "external"
    nginx.ingress.kubernetes.io/auth-url: "https://auth.elcarpenter.com/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://auth.elcarpenter.com/oauth2/start"
    nginx.ingress.kubernetes.io/configuration-snippet: |
    #   # Bypass auth for requests from local network
    #   # This works, but are there some security concerns?
    #   satisfy any;
    #   allow 192.168.0.0/16;
    #   allow 172.16.0.0/12;
    #   allow 10.0.0.0/8;
    #   deny all;
spec:
  rules:
  - host: dns03.network.elcarpenter.com
    http:
      paths:
      - backend:
          serviceName: external-adguard03
          servicePort: 80
  tls:
  - hosts:
    - dns03.network.elcarpenter.com
---
apiVersion: v1
kind: Service
metadata:
  name: external-adguard03
spec:
  ports:
  - name: http
    port: 80
  externalIPs:
  - 10.1.1.13
#  type: ExternalName
#  externalName: 10.1.1.13
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-adguard03
subsets:
- addresses:
  - ip: 10.1.1.13
  ports:
  - name: http
    port: 80
    protocol: TCP
