cluster/kube-system/dns/external-services/edgerouters.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: external-drew-router
  annotations:
    kubernetes.io/ingress.class: "external"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: drew.network.elcarpenter.com
    http:
      paths:
      - backend:
          serviceName: external-drew-router
          servicePort: 443
  tls:
  - hosts:
    - drew.network.elcarpenter.com
---
apiVersion: v1
kind: Service
metadata:
  name: external-drew-router
spec:
  ports:
  - name: https
    port: 443
  externalIPs:
  - 10.10.1.1
#  type: ExternalName
#  externalName: 10.10.1.1
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-drew-router
subsets:
 - addresses:
     - ip: 10.10.1.1
   ports:
     - name: https
       port: 443
       protocol: TCP

##########################################################################################
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: external-jeff-router
  annotations:
    kubernetes.io/ingress.class: "external"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
spec:
  rules:
  - host: jeff.network.elcarpenter.com
    http:
      paths:
      - backend:
          serviceName: external-jeff-router
          servicePort: 443
  tls:
  - hosts:
    - jeff.network.elcarpenter.com
---
apiVersion: v1
kind: Service
metadata:
  name: external-jeff-router
spec:
  ports:
  - name: https
    port: 443
  externalIPs:
    - 10.16.1.1
#  type: ExternalName
#  externalName: 10.16.1.1
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-jeff-router
subsets:
 - addresses:
     - ip: 10.16.1.1
   ports:
     - name: https
       port: 443
       protocol: TCP
###########################################################################
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: external-amber-router
  annotations:
    kubernetes.io/ingress.class: "external"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
spec:
  rules:
  - host: amber.network.elcarpenter.com
    http:
      paths:
      - backend:
          serviceName: external-amber-router
          servicePort: 443
  tls:
  - hosts:
    - amber.network.elcarpenter.com
---
apiVersion: v1
kind: Service
metadata:
  name: external-amber-router
spec:
  ports:
  - name: https
    port: 443
  externalIPs:
    - 10.17.1.1
#  type: ExternalName
#  externalName: 10.17.1.1
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-amber-router
subsets:
 - addresses:
     - ip: 10.17.1.1
   ports:
     - name: https
       port: 443
       protocol: TCP
###########################################################################
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: external-john-router
  annotations:
    kubernetes.io/ingress.class: "external"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "180"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "180"
spec:
  rules:
  - host: john.network.elcarpenter.com
    http:
      paths:
      - backend:
          serviceName: external-john-router
          servicePort: 443
  tls:
  - hosts:
    - john.network.elcarpenter.com
---
apiVersion: v1
kind: Service
metadata:
  name: external-john-router
spec:
  ports:
  - name: https
    port: 443
  externalIPs:
    - 10.18.1.1
#  type: ExternalName
#  externalName: 10.18.1.1
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-john-router
subsets:
 - addresses:
     - ip: 10.18.1.1
   ports:
     - name: https
       port: 443
       protocol: TCP
