cluster/kube-system/dns/external-services/edgeswitches.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: external-drew-es1
  annotations:
    kubernetes.io/ingress.class: "external"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  - host: es1.network.elcarpenter.com
    http:
      paths:
      - backend:
          serviceName: external-drew-es1
          servicePort: 443
  tls:
  - hosts:
    - es1.network.elcarpenter.com
---
apiVersion: v1
kind: Service
metadata:
  name: external-drew-es1
spec:
  ports:
  - name: https
    port: 443
  externalIPs:
    - 10.10.1.2
#  type: ExternalName
#  externalName: 10.10.1.2
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-drew-es1
subsets:
 - addresses:
     - ip: 10.10.1.2
   ports:
     - name: https
       port: 443
       protocol: TCP
