cluster/kube-system/dns/external-services/nas01.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: external-nas01
  annotations:
    kubernetes.io/ingress.class: "external"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: nas01.storage.elcarpenter.com
    http:
      paths:
      - backend:
          serviceName: external-nas01
          servicePort: 80
  tls:
  - hosts:
    - nas01.storage.elcarpenter.com
---
apiVersion: v1
kind: Service
metadata:
  name: external-nas01
spec:
  ports:
  - name: http
    port: 80
  externalIPs:
  - 10.10.200.210
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-nas01
subsets:
- addresses:
  - ip: 10.10.200.210
  ports:
  - name: http
    port: 5000
    protocol: TCP
#########################################################################
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: external-nexusOSS
  annotations:
    kubernetes.io/ingress.class: "internal"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: nexus.storage.elcarpenter.com
    http:
      paths:
      - backend:
          serviceName: external-nexusoss
          servicePort: 80
  tls:
  - hosts:
    - nexus.storage.elcarpenter.com
---
apiVersion: v1
kind: Service
metadata:
  name: external-nexusOSS
spec:
  ports:
  - name: http
    port: 80
  externalIPs:
  - 10.10.200.210
---
apiVersion: v1
kind: Endpoints
metadata:
  name: external-nexusOSS
subsets:
- addresses:
  - ip: 10.10.200.210
  ports:
  - name: http
    port: 8081
    protocol: TCP
